--- a/src/App.css
+++ b/src/App.css
@@ -166,7 +166,14 @@ body, .app {
 .book-cover {
   box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);
   background: #eee;
+  transition: all 0.2s ease-in;
+  cursor: pointer;
 }
+
+.book-cover:hover {
+  transform: scale(1.1);
+}
+
 .book-cover-title {
   padding: 20px 10px 0;
   text-align: center;
