--- a/src/App.css
+++ b/src/App.css
@@ -179,3 +179,41 @@ body, .app {
   text-align: center;
   font-size: 0.8em;
 }
+
+/* Modal */
+
+.modal-box {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  z-index: 2;
+  background: white;
+}
+
+.modal-content {
+  text-align: center;
+  padding: 50px;
+}
+
+.modal-author {
+  color: #999;
+}
+
+.modal-description {
+  text-align: left;
+}
+
+.modal-close-button {
+  cursor: pointer;
+}
+
+.modal-backdrop {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  left: 0;
+  top: 0;
+  z-index: 1;
+  background: rgba(0, 0, 0, 0.7);
+}
